# watch-social-media

./: .env.example  Cargo.toml  diesel.toml  docker-compose.yml
libs/config/: Cargo.toml
libs/config/src/: lib.rs
libs/error/: Cargo.toml
libs/error/src/: lib.rs
libs/infrastructure/: Cargo.toml
libs/infrastructure/src/: db.rs  state.rs
libs/support/: Cargo.toml
libs/support/src/: lib.rs
libs/support/src/helpers/: http.rs  jwt.rs  mod.rs  validation.rs
libs/support/src/store/models/: user.rs
migrations/2023-07-20-141102_init_database_extensions/: down.sql  up.sql
migrations/2023-07-20-141127_create_users/: up.sql
migrations/2023-07-20-213318_create_watches/: down.sql  up.sql
migrations/2023-07-20-213347_create_posts/: up.sql
migrations/2023-07-20-213428_create_post_likes/: up.sql
migrations/2023-07-20-213507_create_comments/: up.sql
migrations/2023-07-20-213556_create_comment_likes/: up.sql
migrations/2023-07-20-213632_create_friendships/: up.sql
migrations/2023-07-20-213700_create_watch_images/: down.sql  up.sql
src/: schema.rs
