[package]
name = "error"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
serde = { version = "1.0.155", features = ["derive"]}
serde_json = "1.0.94"
r2d2 = "0.8.10"
diesel = { version = "2.0.3", features = ["postgres"] }
reqwest = { version = "0.11.16" }
validr = "0.3.1"
heck = "0.4.1"
jsonwebtoken = "8.3.0"