[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { path = "../config" }
error = { path = "../error" }

diesel = { version = "2.0.3", features = [
    "postgres", 
    "r2d2", 
    "serde_json",
]}
diesel_migrations = "2.0.0"
dotenv = "0.15.0"
r2d2 = "0.8.10"
r2d2-diesel = "1.0.0"