[package]
name = "support"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { path = "../config" }
error = { path = "../error" }
infrastructure = { path = "../infrastructure"}

bcrypt = "0.14.0" 
serde = "1.0.157"
serde_json = "1.0.94"
chrono = { version = "0.4.24", features = ["serde"] }
log = "0.4.17"
env_logger = "0.10.0"
zxcvbn = "2.2.2"
jsonwebtoken = "8.3.0"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
dotenv = "0.15.0"

# database
diesel = { version = "2.0.3", features = [
  "postgres",
  "chrono",
  "r2d2",
  "serde_json",
  "64-column-tables",
]}

# HTTP
actix-web = "4.3.1"
